manager: stop greeter explicitly when finishing display

If GDM shuts down while the login screen is active, we fail to
kill off the login screen session.

This commit fixes that, by explicitly stopping the greeter session
on the display (if there is one)

https://bugzilla.gnome.org/show_bug.cgi?id=780213